--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,10 @@ body{
   background-color: #grey;
 
 }
-
-
 .display_comments{
   background-color: white;
   size:inherit;
 }
-
-
 .firstimage{
   image-resolution: from-image;
   border-radius: 50%;
@@ -18,6 +14,35 @@ body{
     float: center:
     color:white:
   }
+  .topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
 
 .intoduction{
   padding-left: 30px;
@@ -25,6 +50,37 @@ body{
   width: 100%;
   font-family: sans-serif;
   font-size: 20px;
+}
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.navbar a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.navbar .icon {
+  display: none;
 }
 
 
@@ -270,16 +326,47 @@ body{
        font-family: sans-serif;
        font-size: 10px;
 
-     }
+         }
      #header{
        background-color: 	#lightblue;
        margin-top: 50px;
        font-family: sans-serif;
        font-size: 25px;
 
-     }
 
-}
+         }
+
+        .topnav.responsive {position: relative;}
+        .topnav.responsive a.icon {
+            position: absolute;
+            right: 0;
+            top: 0;
+          }
+        .topnav.responsive a {
+            float: none;
+            display: block;
+            text-align: left;
+  }
+
+  .navbar a:not(:first-child) {display: none;}
+  .navbar a.icon {
+    float: right;
+    display: block;
+  }
+  .navbar.responsive a.icon {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+  }
+  .navbar.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+    }
+
+
+
 
 * {
     box-sizing: border-box;
